--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,7 @@
     <div class="row">
     	<div class="large-6 columns">
         	<a href="">Get Directions</a>
+            <a href="">View Map</a>
         	<img src="" alt="sp ce commons location map">
         </div>
     </div>
@@ -90,7 +91,8 @@
     </div>
             
     <div class="large-2 columns">
-    	<p>Location: 14th and B Street</p>
+    	<p>Location:</p>
+        <p>1239 B Street</p>
     	<p>Lincoln, Nebraska</p>
     </div>
     
