--- a/events.html
+++ b/events.html
@@ -29,6 +29,15 @@
 </div>
 </header>
 
+<div class="schedule-event">
+<div class="row">
+	<div class="large-6 columns">
+    	<h1>Need to schedule an event?</h1>
+        	<button>Schedule an event.</button>
+    </div>
+</div>
+</div>
+
 
 <footer>
 <div class="row">
@@ -42,7 +51,8 @@
     </div>
             
     <div class="large-2 columns">
-    	<p>Location: 14th and B Street</p>
+    	<p>Location:</p>
+        <p>1239 B Street</p>
     	<p>Lincoln, Nebraska</p>
     </div>
     
