--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     </div>
             
     <div class="large-2 columns">
-    	<p>Location: 14th and B Street</p>
+    	<p>Location:</p>
+        <p>1239 B Street</p>
     	<p>Lincoln, Nebraska</p>
     </div>
     
