--- a/main.html
+++ b/main.html
@@ -36,6 +36,9 @@
 	
 	<a class="button" href="#">Button</a>
 	
+	<a class="btn parallelogram" href="#">
+	<span class="skew-fix">button</span></a>
+	
 	<h2>header level two</h2>
 			   
 	<ol>
@@ -45,7 +48,7 @@
 	
 	<blockquote><p>this will be an examply of a pull quote or a call out. either one works just like this.</p></blockquote>
 	
-	<h3>Header Level 3</h3>
+	<h3>header level 3</h3>
 	
 	<ul>
 	   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
@@ -69,6 +72,7 @@
 		
 		<div class="large-3 columns">
 			<p>spzce@live.com</p>
+			<hr>
 			<p>402-555-5555</p>
 		</div>
 				
@@ -82,13 +86,16 @@
 			<p>Find Us On:</p>
 				<ul>
 					<li><a href="">Facebook</a></li>
+					<hr>
 					<li><a href="">Twitter</a></li>
+					<hr>
 					<li><a href="">Tumblr</a></li>
 				</ul>
 		</div>
 		
 		<div class="large-2 columns">
 			<p>Est. 2010</p>
+			<hr>
 			<p><small>&copy;Copyright</small></p>
 		</div>
 	</div>
