Replaced some Divs with Sections
Just making up for the last commit that I had missed.

--- a/about.html
+++ b/about.html
@@ -130,9 +130,9 @@
     	<p>The community is made stronger by your participation.  Every person contributes to to the overall environment. Let’s work together to make this community safe and supportive!</p>
     </div>
 </div>
-</div>
+</section>
 
-<div class="visit-spce">
+<section class="visit-spce">
 <div class="row">
 	<div class="large-4 columns">
     	<h2>Visit SP CE</h2>
@@ -180,7 +180,7 @@
     	<img src="img/spce-map.svg" alt="sp ce location map">
     </div>
 </div>
-</div>
+</section>
 
         
 <footer>
