--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 </div>
 </header>
 
-<div class="contact-form">
+<section class="contact-form">
 	<div class="row">
     	<div class="large-3 columns">
         	<h1>Contact Us</h1>
@@ -55,9 +55,9 @@
             </form>
       	</div>
    	</div>
-</div>
+</section>
 
-<div class="contact-information">
+<section class="contact-information">
 	<div class="row">
     	<div class="large-6 columns">
         	<ul>
@@ -75,7 +75,7 @@
         	<img src="img/spce-map.svg" alt="sp ce commons location map">
         </div>
     </div>
-</div>
+</section>
     
 <footer>
 <div class="row">
