Need helping aligning some content center
Molli, help! Need help aligning stuff in the middle of the page.

--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
 
 <div class="about-spce">    
 <div class="row">
-	<div class="large-4 columns">
-    	<h1>Mission Statement</h1>
+	<div class="large-12 columns">
+    	<h1 class="spce-title">Mission Statement</h1>
      </div>
 </div>
 
 <div class="row">
-	<div class="large-6 columns">
+	<div class="large-6 columns text-center">
     	<p>SP CE Commons is an open community that grows through your participation, empowerment, and shared responsibility. We provide a safe and welcoming physical and emotional space where engagement in creative and social endeavors is encouraged through access to tools, resources, and human energy. Here, you are teacher and learner, treated with dignity and respect as you develop your expressive capacities through poetry, art and craft, speaking and listening, moving and making.</p>
     </div>
 </div>
