Changed Column Alignment
Added a center aligned column class to the parallelogram button on the
index page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
           
     <div class="row">
-        <div class="large-5 columns">
+        <div class="large-4 large-centered columns">
 			<a class="btn parallelogram" href="events.html">
 			<span class="skew-fix">Check Out More Events</span></a>
         </div>
