--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="row">
-	<div class="large-6 columns text-center">
+	<div class="large-6 large-centered columns text-center">
     	<p>SP CE Commons is an open community that grows through your participation, empowerment, and shared responsibility. We provide a safe and welcoming physical and emotional space where engagement in creative and social endeavors is encouraged through access to tools, resources, and human energy. Here, you are teacher and learner, treated with dignity and respect as you develop your expressive capacities through poetry, art and craft, speaking and listening, moving and making.</p>
     </div>
 </div>
