Centered Columns and Centered Text
Added some centered columns and centered text classes on various parts
of the about and index pages to assist with styling.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
 <div class="about-spce">    
 <div class="row">
-	<div class="large-12 columns">
+	<div class="large-12 large-centered columns">
     	<h1 class="spce-title">Mission Statement</h1>
      </div>
 </div>
@@ -62,13 +62,13 @@
 </div>
 
 <div class="row">
-	<div class="large-10 columns">
+	<div class="large-9 large-centered text-center columns">
     	<span>SP CE Commons is committed to being a welcoming inclusive, safe, and supportive community.</span>
     </div>
 </div>
 
 <div class="row">
-	<div class="large-5 columns">
+	<div class="large-7 large-centered columns">
     	<p>Each individual is a whole person deserving of dignity and respect.</p>
     </div>
 </div>
@@ -96,13 +96,13 @@
 </div>
 
 <div class="row">
-	<div class="large-10 columns">
+	<div class="large-10 large-centered text-center columns">
     	<span>As a community, we are committed to addressing concerns through education and mediation.</span>
     </div>
 </div>
 
 <div class="row">
-	<div class="large-5 columns">
+	<div class="large-8 large-centered columns">
     	<p>If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if you choose to share them.</p>
     </div>
 </div>
@@ -126,7 +126,7 @@
 </div>
 
 <div class="row">
-	<div class="large-6 columns">
+	<div class="large-7 large-centered columns">
     	<p>The community is made stronger by your participation.  Every person contributes to to the overall environment. Let’s work together to make this community safe and supportive!</p>
     </div>
 </div>
@@ -168,12 +168,6 @@
     	</div>
 	</div>
 </div> 
-
-<div class="row">
-	<div class="large-3 columns">
-    	<a href="">Get Directions</a>
-    </div>
-</div>
 
 <div class="row">
 	<div class="large-7 columns">
