--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 <div class="hero-space">
 <div class="index-content">   
     <div class="row">
-        <div class="large-12 columns">
+        <div class="large-12 large-centered columns">
             <h1 class="spce-title">SP CE Commons</h1>
         </div>
     </div>
      
     <div class="row">      
-        <div class="large-8 columns large-offset-2 text-center">
+        <div class="large-8 columns large-centered text-center">
             <span class="call-out">SP CE is an open community that grows through your participation, empowerment, and shared responsiblity</span>
         </div>
     </div>
            
     <div class="row">
-        <div class="large-12 columns">
+        <div class="large-12 large-centered columns">
             <h2 class="spce-subtitle">February 5th Winter Group 2PM</h2>
         </div>
     </div>
