--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 
 <section class="visit-spce">
 <div class="row">
-	<div class="large-4 columns">
+	<div class="large-2 large-centered text-centered columns">
     	<h2>Visit SP CE</h2>
     </div>
 </div>
