--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,9 @@
     <div class="row">
     	<div class="large-6 medium-6 columns">
         	<form>
+				<label>Name
+					<input type="text" placeholder="Your Name Here" />
+				</label>
             	<input type="text" name="name" value="Name">
                 <input type="text" name="email" value="Email">
                 <input type="text" name="phonenumber" value="Phone Number">
