--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
 </div>
 </header>
 
-<div class="about-spce">    
+<div class="about-spce"> 
+<div class="mission-statement">   
 <div class="row">
 	<div class="large-6 large-centered columns text-center">
     	<h1>Mission Statement</h1>
@@ -42,23 +43,28 @@
     	<p>SP CE Commons is an open community that grows through your participation, empowerment, and shared responsibility. We provide a safe and welcoming physical and emotional space where engagement in creative and social endeavors is encouraged through access to tools, resources, and human energy. Here, you are teacher and learner, treated with dignity and respect as you develop your expressive capacities through poetry, art and craft, speaking and listening, moving and making.</p>
     </div>
 </div>
+</div>
 
 <div class="row">
-	<div class="call-out large-2 columns">
+<div class="keywords">
+	<div class="large-2 columns">
+    <div class="keyword-01">
     	<p>Supportive</p>
     </div>
-</div>
-
-<div class="row">    
-    <div class="call-out large-2 columns">
+    </div>
+    
+    <div class="large-2 large-centered columns">
+    <div class="keyword-02">
     	<p>Inclusive</p>
     </div>
-</div>
-
-<div class="row">    
-    <div class="call-out large-2 columns">
+    </div>
+    
+    <div class="large-2 columns">
+    <div class="keyword-03">
     	<p>Education</p>
     </div>
+    </div>
+</div>
 </div>
 
 <div class="row">
