--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,14 @@
     <div class="row">
     	<div class="large-6 medium-6 columns">
         	<form>
-				<label>Name
-					<input type="text" placeholder="Your Name Here" />
-				</label>
-            	<input type="text" name="name" value="Name">
-                <input type="text" name="email" value="Email">
-                <input type="text" name="phonenumber" value="Phone Number">
-                <input type="text" name="message" value="Send us a message!">
+            	<label>Name</label>
+                	<input type="text" name="name" value="Name">
+                <label>Email</label>
+                	<input type="text" name="email" value="Email">
+                <label>Phone Number</label>
+                	<input type="text" name="phonenumber" value="Phone Number">
+                <label>Message</label>
+                	<input type="text" name="message" value="Send us a message!">
                 <input type="submit" value="Send">
             </form>
       	</div>
