--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
 <div class="keywords">
 <div class="row">
-<div class="large-2 large-centered columns">
+<div class="large-2 medium-2 large-centered medium-centered columns">
     <div class="keyword-02">
     	<p>Inclusive</p>
     </div>
@@ -55,14 +55,14 @@
 </div>
 
 <div class="row">
-	<div class="large-2 columns">
+	<div class="large-2 medium-2 columns">
     <div class="keyword-01">
     	<p>Supportive</p>
     </div>
     </div>
     
     
-    <div class="large-2 columns">
+    <div class="large-2 medium-2 columns">
     <div class="keyword-03">
     	<p>Education</p>
     </div>
