Headings, Subheads, List Heads
Fixed color, size, and hierarchy of the headings on the about page.

--- a/about.html
+++ b/about.html
@@ -66,17 +66,17 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="call-out">SP CE Commons is committed to being a welcoming inclusive, safe, and supportive community.</span>
+        <span class="head-call-out">SP CE Commons is committed to being a welcoming<br>inclusive, safe, and supportive community.</span>
       </div>
     </div>
     <div class="row">
       <div class="large-8 medium-8 medium-centered large-centered text-center columns">
-        <p class="call-out">Each individual is a whole person deserving of dignity and respect.</p>
+        <p class="subhead-call-out">Each individual is a whole person deserving of dignity and respect.</p>
       </div>
     </div>
     <div class="row">
       <div class="large-4 medium-5 columns">
-        <p class="call-out">Please:</p>
+        <p class="list-head-call-out">Please:</p>
         <ul>
           <li>encourage others to participate and grow</li>
           <li>be mindful of your words and actions</li>
@@ -85,7 +85,7 @@
         </ul>
       </div>
       <div class="large-4 medium-5 columns">
-        <p class="call-out">In a moment when someone is brave enough to speak up, pleae be brave enought to:</p>
+        <p class="list-head-call-out">In a moment when someone is brave enough to speak up, pleae be brave enought to:</p>
         <ul>
           <li>listen</li>
           <li>search for understanding in yourself</li>
@@ -96,17 +96,17 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="call-out">As a community, we are committed to addressing concerns through education and mediation.</span>
+        <span class="head-call-out">As a community, we are committed to addressing concerns<br>through education and mediation.</span>
       </div>
     </div>
     <div class="row">
       <div class="large-8 medium-8 medium-centered large-centered text-center columns">
-        <p class="call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if you choose to share them.</p>
+        <p class="subhead-call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if<br>you choose to share them.</p>
       </div>
     </div>
     <div class="row">
       <div class="large-4 medium-5 columns">
-        <p class="call-out">Solutions could include:</p>
+        <p class="list-head-call-out">Solutions could include:</p>
         <ul>
           <li>an in-the-moment request for more empathetic or respectful language or behavior</li>
           <li>a one-on-one or group conversation in which members of the community will act as advocates once an issue has been brought to our attention</li>
@@ -122,7 +122,7 @@
     </div>
     <div class="row">
       <div class="large-7 medium-7 medium-centered large-centered text-center columns">
-        <p>The community is made stronger by your participation.  Every person contributes to to the overall environment. Let’s work together to make this community safe and supportive!</p>
+        <p class="head-call-out">The community is made stronger by your participation.  Every person contributes to to the overall environment. Let’s work together to make this community safe and supportive!</p>
       </div>
    	</div>
     </section>
