--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
           <div class="large-6 large-centered columns text-center">
-            <h2 class="spce-subtitle">February 5th Winter Group 2PM</h2>
+            <h2 class="spce-subtitle">Meditation Sundays 10AM</h2>
           </div>
         </div>
         <div class="row">
