--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <input type="text" name="phonenumber" value="Phone Number">
             <label>Message</label>
             <input type="text" name="message" value="Send us a message!">
-            <input type="submit" value="Send">
+            <input class="btn" type="submit" value="Send">
           </form>
         </div>
         <div class="large-6 medium-6 columns">
@@ -54,8 +54,6 @@
             <li>(402)555-5555</li>
             <li>13th and B Street Lincoln, Nebraska 68500</li>
           </ul>
-          <a href="">Get Directions</a>
-          <a href="">View Map</a>
           <img src="img/spce-map.svg" alt="sp ce commons location map">
         </div>
       </div>
