--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
         </div>
       </div>
     </header>
+    <div class="contact-information">
     <section class="contact-form">
       <div class="row">
         <div class="large-3 columns">
@@ -58,6 +59,8 @@
         </div>
       </div>
     </section>
+    </div>
+    
     <footer>
       <div class="row">
         <div class="large-2 medium-2 columns hide-for-small-only">
