--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,17 @@
           </form>
         </div>
         <div class="large-6 medium-6 columns">
-          <ul>
-            <li>spzce@spzcecommons.com</li>
-            <li>(402)555-5555</li>
-            <li>13th and B Street Lincoln, Nebraska 68500</li>
+        
+          <ul class="contact-information-list">
+            <li>
+            	<img src="img/spce-icons-email.svg" alt="email icon">
+                spzce@spzcecommons.com</li>
+            <li>
+            	<img src="img/spce-icons-phone.svg" alt="cell phone icon">
+                (402)555-5555</li>
+            <li>
+            	<img src="img/spce-icons-location.svg" alt="locaiton icon">
+                13th and B Street Lincoln, Nebraska 68500</li>
           </ul>
           <img src="img/spce-map.svg" alt="sp ce commons location map">
         </div>
