Revert 2d0ad91..028e3cf
This rolls back to commit 2d0ad91e64a3d73d6844ac88355da5d879068b1d.

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="head-call-out">SP CE Commons is committed to being a welcoming inclusive, safe, and supportive community.</span>
+        <span class="head-call-out">SP CE Commons is committed to being a welcoming<br>inclusive, safe, and supportive community.</span>
       </div>
     </div>
     <div class="row">
@@ -96,12 +96,12 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="head-call-out">As a community, we are committed to addressing concerns through education and mediation.</span>
+        <span class="head-call-out">As a community, we are committed to addressing concerns<br>through education and mediation.</span>
       </div>
     </div>
     <div class="row">
       <div class="large-8 medium-8 medium-centered large-centered text-center columns">
-        <p class="subhead-call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if you choose to share them.</p>
+        <p class="subhead-call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if<br>you choose to share them.</p>
       </div>
     </div>
     <div class="row">
@@ -131,13 +131,13 @@
     <section class="visit-spce">
       <div class="row">
         <div class="large-4 large-centered text-center columns">
-          <h1>Visit SP CE</h1>
+          <h2>Visit SP CE</h2>
         </div>
       </div>
       <div class="row">
         <div class="large-3 medium-3 columns">
           <div class="spce-hours">
-            <p class="subhead-call-out">Hours</p>
+            <p class="call-out">Hours:</p>
             <ul>
               <li>Events every Saturday</li>
               <li>Events Every First Friday</li>
@@ -145,7 +145,7 @@
             </ul>
           </div>
           <div class="spce-location">
-            <p class="subhead-call-out">SP CE Commons</p>
+            <p class="call-out">SP CE Commons</p>
             <ul>
               <li>1239 B Street Lincoln, Nebraska</li>
               <li>402-555-55555</li>
