Revert 028e3cf..e84bbcc
This rolls back to commit 028e3cfd682d2eed6d05225d1c01116dc8421167.

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
         </div>
       </div>
     </header>
+    <div class="contact-information">
     <section class="contact-form">
       <div class="row">
         <div class="large-3 columns">
@@ -45,21 +46,28 @@
             <input type="text" name="phonenumber" value="Phone Number">
             <label>Message</label>
             <input type="text" name="message" value="Send us a message!">
-            <input type="submit" value="Send">
+            <input class="btn" type="submit" value="Send">
           </form>
         </div>
         <div class="large-6 medium-6 columns">
-          <ul>
-            <li>spzce@spzcecommons.com</li>
-            <li>(402)555-5555</li>
-            <li>13th and B Street Lincoln, Nebraska 68500</li>
+        
+          <ul class="contact-information-list">
+            <li>
+            	<img src="img/spce-icons-email.svg" alt="email icon">
+                spzce@spzcecommons.com</li>
+            <li>
+            	<img src="img/spce-icons-phone.svg" alt="cell phone icon">
+                (402)555-5555</li>
+            <li>
+            	<img src="img/spce-icons-location.svg" alt="locaiton icon">
+                13th and B Street Lincoln, Nebraska 68500</li>
           </ul>
-          <a href="">Get Directions</a>
-          <a href="">View Map</a>
           <img src="img/spce-map.svg" alt="sp ce commons location map">
         </div>
       </div>
     </section>
+    </div>
+    
     <footer>
       <div class="row">
         <div class="large-2 medium-2 columns hide-for-small-only">
