--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="head-call-out">SP CE Commons is committed to being a welcoming<br>inclusive, safe, and supportive community.</span>
+        <span class="head-call-out">SP CE Commons is committed to being a welcoming inclusive, safe, and supportive community.</span>
       </div>
     </div>
     <div class="row">
@@ -96,12 +96,12 @@
     </div>
     <div class="row">
       <div class="large-12 medium-12 medium-centered large-centered text-center columns">
-        <span class="head-call-out">As a community, we are committed to addressing concerns<br>through education and mediation.</span>
+        <span class="head-call-out">As a community, we are committed to addressing concerns through education and mediation.</span>
       </div>
     </div>
     <div class="row">
       <div class="large-8 medium-8 medium-centered large-centered text-center columns">
-        <p class="subhead-call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if<br>you choose to share them.</p>
+        <p class="subhead-call-out">If you have experienced or observed anything that made you feel unwelcome, please know your concerns will be heard if you choose to share them.</p>
       </div>
     </div>
     <div class="row">
