--- a/about.html
+++ b/about.html
@@ -131,13 +131,13 @@
     <section class="visit-spce">
       <div class="row">
         <div class="large-4 large-centered text-center columns">
-          <h2>Visit SP CE</h2>
+          <h1>Visit SP CE</h1>
         </div>
       </div>
       <div class="row">
         <div class="large-3 medium-3 columns">
           <div class="spce-hours">
-            <p class="call-out">Hours:</p>
+            <p class="subhead-call-out">Hours:</p>
             <ul>
               <li>Events every Saturday</li>
               <li>Events Every First Friday</li>
@@ -145,7 +145,7 @@
             </ul>
           </div>
           <div class="spce-location">
-            <p class="call-out">SP CE Commons</p>
+            <p class="subhead-call-out">SP CE Commons</p>
             <ul>
               <li>1239 B Street Lincoln, Nebraska</li>
               <li>402-555-55555</li>
