--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </div>
         <div class="row">
           <div class="large-8 medium-8 columns large-centered text-center medium-centered">
-            <span class="call-out">SP CE is an open community that grows through your participation, empowerment, and shared responsiblity</span>
+            <p class="call-out">SP CE is an open community that grows through your participation, empowerment, and shared responsiblity</p>
           </div>
         </div>
         <div class="row">
           <div class="large-6 large-centered columns text-center">
-            <h2 class="spce-subtitle">Meditation Sundays 10AM</h2>
+            <h2 class="head-call-out">Meditation Sundays 10AM</h2>
           </div>
         </div>
         <div class="row">
