changed the send button
changed the send button

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <input type="text" name="phonenumber" value="Phone Number">
             <label>Message</label>
             <input type="text" name="message" value="Send us a message!">
-            <input type="submit" value="Send">
+            <input class="btn" type="submit" value="Send">
           </form>
         </div>
         <div class="large-6 medium-6 columns">
