added icons fixed some spacing issues
fixed some icons and some spacing issues

--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
           </form>
         </div>
         <div class="large-6 medium-6 columns">
-          <ul>
-            <li>spzce@spzcecommons.com</li>
-            <li>(402)555-5555</li>
-            <li>13th and B Street Lincoln, Nebraska 68500</li>
+          <ul class="contact-information-list">
+            <li><img src="img/spce-icons-email.svg" alt="email icon">spzce@spzcecommons.com</li>
+            <li><img src="img/spce-icons-phone.svg" alt="phone icon">(402)555-5555</li>
+            <li><img src="img/spce-icons-location.svg" alt="location icon">13th and B Street Lincoln, Nebraska 68500</li>
           </ul>
           <a href="">Get Directions</a>
           <a href="">View Map</a>
